sep5 open doc function change

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
         This script is produced by a dedicated Function Proxy. See proxies.json file.
     -->
     <script src="%REACT_APP_BACKEND_BASE_URI%/config-script"></script>
-
+    <style>
+      .MuiCheckbox-colorSecondary.Mui-checked {
+        color: #59b4d9 !important;
+      }
+    </style>
 </head>
 
 <body>
